# cemcan

./: .gitignore  Bos_deneme.py  General.md  Library  Phone Book  Phone Number  README.md  Tekrar.py  arac_satisi_workshop.py  araclar.sqlite  git.md  kitaplar.sqlite  sample_course.py
1-Lesson_21-22.08.2021/: variables.py
10-Lesson_06-07.11.2021/: RegularExpression.py  workshop.py
10-Lesson_06-07.11.2021/example7/my_package_project/: setup.cfg  setup.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/: __init__.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/sub_pkg1/: __init__.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/sub_pkg1/sub_pkg1_pkg2/: module1.py  module2.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/sub_pkg2/: __init__.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/sub_pkg2/sub_pkg2_pkg1/: module1.py  module2.py
10-Lesson_06-07.11.2021/example7/my_package_project/src/my_package/sub_pkg2/sub_pkg2_pkg2/: module1.py  module2.py
11-Lesson_13-14.11.2021/: ODEV.txt  clousure.py  decorator_property.py  generator.py  iterator.py  lambda_filter_map_reduce_zip_groupby.py  workshop_iterator.py
12-Lesson_20-21.11.2021/: datetime.py  file_operations.py  list_comprehensions.py  pickle.py  str_test.py  test.html
14-Lesson_04-05.12.2021/: 1.js_giris.html  10.exception.html  2.ciktilar.html  2.selector.html  3.degiskenler.html  4.events.html  4.operatorler.html  5.veri_girisi.html  6.akis_denetimi.html  7.donguler.html  8.diziler.html  (+1 more)
(+296 files in other folders)
