[metadata]
name = my_package
keywords = my_package,web,test

[options]
python_requires = >=3.6
install_requires =
    requests >= 2.0.0
    click >= 8.0.0

[options.entry_points]
console_scripts =
    test_app = my_package.main_pkg.main_module:main_fonksiyon

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[coverage:run]
branch = True
source =
    my_package
    tests

[coverage:paths]
source =
    src


